tests/errors/string_58/GETCHAR2.src
.IPPcode21

DEFVAR GF@res

GETCHAR GF@res string@ABC int@3
